Fixed some pre whitespace issues.

--- a/public/style/pygments.scss
+++ b/public/style/pygments.scss
@@ -8,7 +8,7 @@
 
 .highlight pre {
 	margin: 0;
-	white-space: nowrap;
+	white-space: pre;
 }
 
 /* Line Number */
@@ -17,7 +17,6 @@
 	color: #8c8a77;
 	display: block;
 	float: left;
-	margin-right: 20px;
 	padding-right: 10px;
 	text-align: right;
 	width: 20px;
